--- a/aopkg.toml
+++ b/aopkg.toml
@@ -1,6 +1,6 @@
 name = "NAME_GENERATOR_MODULE"
 description = "Generates character names for games"
-version = "0.1.1"
+version = "0.1.2"
 author = "Yakachi"
 bot_type = "Nadybot"
-bot_version = ">=4.2.0, <6.0.0"
+bot_version = "^6.0.0-alpha.1"
