--- a/aopkg.toml
+++ b/aopkg.toml
@@ -1,6 +1,10 @@
 name = "NAME_GENERATOR_MODULE"
 description = "Generates character names for games"
-version = "0.1.2"
+version = "0.1.3"
 author = "Yakachi"
+github = "Nadybot/HOROSCOPE_MODULE"
 bot_type = "Nadybot"
 bot_version = "^6.0.0-alpha.1"
+
+[requires]
+ext-pcre = "*"
